FUSETOOLS-2564 - avoid specific method for testing
Signed-off-by: Aurélien Pupier <apupier@redhat.com>